# Athena-Pro

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml
docs/: CODE_INVENTORY.md  RESEARCH_OS_IMPLEMENTATION_PLAN.md  RESEARCH_OS_ROADMAP.md  VALIDATION_REPORT.md  tutorial_code_index.json
docs/prompts/: BASELINE_REVIEW_NODE_PROMPT.md  BASELINE_SELECTOR_AGENT_PROMPT.md  CITATION_REVIEW_NODE_PROMPT.md  CODE_SCOUT_AGENT_PROMPT.md  EVIDENCE_EXTRACTOR_AGENT_PROMPT.md  EXPERIMENT_DESIGNER_AGENT_PROMPT.md  EXPERIMENT_REVIEW_NODE_PROMPT.md  IDEA_GENERATOR_AGENT_PROMPT.md  PAPER_COLLECTOR_AGENT_PROMPT.md  PAPER_READER_NOTE_NODE_PROMPT.md  PLANNER_AGENT_PROMPT.md  PLAN_REVIEW_NODE_PROMPT.md  QUALITY_GATE_NODE_PROMPT.md  REPRODUCER_AGENT_PROMPT.md  RESEARCHER_AGENT_PROMPT.md  REVIEWER_AGENT_PROMPT.md  SUPERVISOR_NODE_PROMPT.md  TAXONOMY_AGENT_PROMPT.md  WRITER_AGENT_PROMPT.md
scripts/: generate_research_node_prompts.py
src/athena/: __init__.py  app_settings.py  config.py  costs.py  events.py  hitl.py  llm_factory.py  observability.py  prompts.py  runtime.py  schemas.py  state.py
tests/: test_frontend_contract.py  test_integration_regressions.py  test_runtime.py
tests/research/: conftest.py  test_agent_loop.py  test_approval_policy.py  test_baseline_ranking.py  test_benchmarks.py  test_checkpoints.py  test_citation_graph.py  test_claim_extract.py  test_domain_models.py  test_evidence_audit.py  (+13 more)
web/: components.d.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+413 files in other folders)
