[project]
name = "athena-pro-integrated"
version = "5.0.0"
description = "Production-ready deep research assistant (single-user) with multi-agent LangGraph-style runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "aiosqlite>=0.20",
  "tenacity>=8.3",
  "structlog>=24.1",
  "markdown-it-py>=3.0",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "ddgs>=6.0",
]

[project.optional-dependencies]
llm = [
  "openai>=1.30",
  "anthropic>=0.34",
]
search = [
  "tavily-python>=0.5",
]
export = [
  "weasyprint>=62.0",
  "pypandoc>=1.13",
]
langgraph = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
all = [
  "openai>=1.30",
  "anthropic>=0.34",
  "tavily-python>=0.5",
  "weasyprint>=62.0",
  "pypandoc>=1.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
